--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'Dead Code Hunter'
-description: 'Find unreachable functions in your codebase using Supermodel call graphs'
+name: 'Circular Dependency Hunter'
+description: 'Find circular dependencies in your codebase using Supermodel graphs'
 author: 'Supermodel Tools'
 
 branding:
@@ -18,20 +18,24 @@ inputs:
     description: 'Post findings as PR comment'
     required: false
     default: 'true'
-  fail-on-dead-code:
-    description: 'Fail the action if dead code is found'
+  fail-on-circular-deps:
+    description: 'Fail the action if circular dependencies are found'
     required: false
     default: 'false'
   ignore-patterns:
     description: 'JSON array of glob patterns to ignore'
     required: false
     default: '[]'
+  debug:
+    description: 'Log graph diagnostics for debugging'
+    required: false
+    default: 'false'
 
 outputs:
-  dead-code-count:
-    description: 'Number of dead code functions found'
-  dead-code-json:
-    description: 'JSON array of dead code findings'
+  circular-dependency-count:
+    description: 'Number of circular dependencies found'
+  circular-dependency-json:
+    description: 'JSON array of circular dependency cycles'
 
 runs:
   using: 'node20'
